# sandboxaudit

./: .gitignore  README.md  pyproject.toml  sandboxaudit.py
examples/: escape_attempt.py  safe_code.py
tests/: test_sandboxaudit.py
